--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
+    "recharts": "^2.10.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
